attempting to fix ios display bug

--- a/style.css
+++ b/style.css
@@ -33,3 +33,9 @@ header h1 {
 canvas {
   margin-top: 20px;
 }
+canvas#angleChart {
+  width: 100% !important;
+  height: 300px !important;
+  max-width: 100%;
+  display: block;
+}
